samples/_failures_safe/1761337552_30853e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a448572.c: In function ‘main’:
./samples/SAFE/__tmp_6a448572.c:166:9: error: expected declaration or statement at end of input
  166 |         printf("Input rejected - ended in state %d\n", sm->current_state);
      |         ^~~~~~
./samples/SAFE/__tmp_6a448572.c:166:9: error: expected declaration or statement at end of input
